k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soc-agente-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: soc-agente
  template:
    metadata:
      labels:
        app: soc-agente
    spec:
      containers:
      - name: agente-contenedor
        image: agente-soc:dev     # <-- ETIQUETA FIJA APLICADA
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        # --- INYECCIÓN DE SECRETOS ---
        volumeMounts:
        - name: logs-del-soc
          mountPath: /app/logs
      volumes:
      - name: logs-del-soc
        persistentVolumeClaim:
          claimName: soc-pvc
