k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soc-service
spec:
  selector:
    app: soc-agente
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
